--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author: CollectionBuilder
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: Metadata - Sheet1
+metadata: my-metadata
 
 ##########
 # GOOGLE SERVICES [optional!]
@@ -64,3 +64,4 @@ exclude: [docs/, Rakefile, README.md, LICENSE]
 # compress CSS output
 sass:
   style: compressed
+ta
