--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo (ex. /assets/img/feature.jpg), or a full url to an image elsewhere
-featured-image: https://www.facebook.com/photo/?fbid=4815086995191551&set=a.382418395125122
+featured-image: https://i.pinimg.com/originals/f3/1c/6e/f31c6ea01c868aa15fd3ba39fcff935c.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: # Default is 8em
 # optional: change position of background image, center, top, bottom
